--- a/css-files/header-footer.css
+++ b/css-files/header-footer.css
@@ -1,3 +1,4 @@
+/* STICKY HEADER + FOOTER*/
 html, body {
     box-sizing: border-box;
     height: 100%;
@@ -28,9 +29,52 @@ html, body {
     color: black;
   }
 
+  /* END STICKY HEADER + FOOTER*/
+
+  /* HEADER CODE */
+
   #header-logo img {
     height: 80px;
     width: 110px;
     border-radius: 20px;
     float: left;
   }
+
+  #header-icons img {
+    height: 60px;
+    width: 60px;
+    float: right;
+  }
+
+  /* END HEADER CODE */
+
+  /* SEARCH BAR */
+
+  .search-container {
+    text-align: center;
+  }
+  
+  /*Input Search Box Code*/
+  input[type="text"] {
+    padding: 10px;
+    font-size: 15px;
+    width: 350px;
+    margin-left: -200px;
+    margin-top: 20px;
+    border-radius: 20px;
+    
+  }
+  
+  /*Submitt Search Comment Button Code*/
+  button {
+    padding: 12px 15px;
+    font-size: 15px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    cursor: pointer;
+    width: 140px;
+    border-radius: 15px;
+  }
+
+  /* END SEARCH BAR */
