--- a/css-files/header-footer.css
+++ b/css-files/header-footer.css
@@ -46,6 +46,13 @@ html, body {
     float: right;
   }
 
+  #links-header a {
+    float: right;
+    padding-right: 20px;
+    color: black;
+    text-decoration: none;
+  }
+
   /* END HEADER CODE */
 
   /* SEARCH BAR */
