--- a/css-files/header-footer.css
+++ b/css-files/header-footer.css
@@ -70,6 +70,11 @@ html, body {
     margin-right: 55px;
   }
 
+  .footer-about a, .footer-work a,.footer-services-1 a, .footer-services-2 a {
+    font-size: 20px;
+    size: 20px;
+  }
+
   /* END FOOTER*/
 
   /* SEARCH BAR */
