--- a/css-files/header-footer.css
+++ b/css-files/header-footer.css
@@ -41,9 +41,16 @@ html, body {
   }
 
   #header-icons img {
-    height: 60px;
-    width: 60px;
+    height: 50px;
+    width: 50px;
     float: right;
+  }
+
+  #header-icons img {
+    padding-top: -50px;
+    padding-bottom: 20px;
+    padding-right: 15px;
+    padding-left: 10px;
   }
 
   #links-header a {
@@ -51,6 +58,7 @@ html, body {
     padding-right: 20px;
     color: black;
     text-decoration: none;
+    font-size: 20px;
   }
 
   /* END HEADER CODE */
