--- a/css-files/header-footer.css
+++ b/css-files/header-footer.css
@@ -36,21 +36,23 @@ html, body {
   #header-logo img {
     height: 80px;
     width: 110px;
-    border-radius: 20px;
     float: left;
+    padding-top: 20px;
+    padding-left: 20px;
   }
 
   #header-icons img {
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;
+    padding-right: 15px;
+    padding-left: 10px;
+    padding-bottom: 20px;
+    padding-top: -100px;
     float: right;
   }
 
-  #header-icons img {
-    padding-top: -50px;
-    padding-bottom: 20px;
-    padding-right: 15px;
-    padding-left: 10px;
+  #header-icons div {
+    padding-top: -100px;
   }
 
   #links-header a {
@@ -59,6 +61,12 @@ html, body {
     color: black;
     text-decoration: none;
     font-size: 20px;
+    padding-bottom: 20px;
+  }
+
+  #links-header {
+    padding-bottom: 10px;
+    padding-top: -70px;
   }
 
   /* END HEADER CODE */
