--- a/css-files/header-footer.css
+++ b/css-files/header-footer.css
@@ -25,6 +25,7 @@ html, body {
   main.page-body {
     flex-grow: 1; /* Lets main take all available space */
     padding: 0px; /* endret det til 0*/
+    margin: 0px;
     background-color: #fafafa;
     color: black;
   }
