--- a/css-files/index-content.css
+++ b/css-files/index-content.css
@@ -1,5 +1,7 @@
 .top-pic {
   background-color: black;
+  margin-top: 0px;
+  padding: 0px;
 }
 
 .top-pic img{
@@ -94,4 +96,49 @@
   font-size: 24px;
   color: white;
   box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
+}
+
+.content1-properties {
+  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-left: 150px;
+}
+
+.properties {
+  display: flex;
+  gap: 30px;
+}
+
+.property {
+  display: flex;
+  flex-direction: column;
+  width: 330px;
+  height: 375px;
+  background-color: #456470;
+  border-radius: 15px;
+  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
+}
+
+.property img {
+  width: 330px;
+  height: 250px;
+  border-radius: 15px 15px 0px 0px;
+}
+
+.property-text {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-self: center;
+  line-height: 15px;
+}
+
+.property-text p {
+  font-weight: bold;
+  font-size: 30px;
+}
+
+.property-text span {
+  font-size: 26px;
 }
