--- a/css-files/index-content.css
+++ b/css-files/index-content.css
@@ -153,9 +153,6 @@ body {
 .property-continue {
   background: black;
   border-radius: 5px;
-  &:hover {
-    transform: scale(1.15);
-  }
 }
 
 .property-next-button {
@@ -209,4 +206,135 @@ body {
   .property-text span {
     font-size: 26px;
   }
+}
+
+.content2-eco {
+  background-color: #D9D9D9;
+  margin-bottom: 100px;
+  height: 520px;
+}
+
+.eco-friendly-content {
+  display: inline-flex;
+  align-items: center;
+}
+
+.eco-friendly-left {
+  margin-left: 150px;
+  margin-right: 15px;
+  font-size: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
+.learn-more-button {
+  display: flex;
+  justify-content: center;
+}
+
+.learn-more-button a p {
+  background-color: #456470;
+  padding: 15px;
+  border-radius: 999px;
+  color: white;
+  padding-left: 50px;
+  padding-right: 50px;
+  font-size: 25px;
+}
+
+.eco-friendly-image {
+  margin-right: 150px;
+  margin-top: 25px;
+}
+
+.eco-friendly-image img {
+  border-radius: 5px;
+  height: 460px;
+  width: 590px;
+  object-fit: cover;
+}
+
+
+
+
+
+.content2-selling {
+  background-color: #456470;
+  margin-bottom: 100px;
+  height: 520px;
+}
+
+.selling-content {
+  display: inline-flex;
+  align-items: center;
+}
+
+.selling-right {
+  margin-right: 150px;
+  margin-left: 100px;
+  font-size: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
+#selling-content-button a p {
+  background-color: #D9D9D9;
+  padding: 15px;
+  border-radius: 999px;
+  color: #456470;
+  padding-left: 50px;
+  padding-right: 50px;
+  font-size: 25px;
+}
+
+.selling-image {
+  margin-left: 150px;
+  margin-top: 25px;
+}
+
+.selling-image img {
+  border-radius: 5px;
+  height: 460px;
+  width: 590px;
+  object-fit: cover;
+}
+
+
+
+
+
+
+
+.content2-buying {
+  background-color: #D9D9D9;
+  margin-bottom: 100px;
+  height: 520px;
+}
+
+.buying-content {
+  display: inline-flex;
+  align-items: center;
+}
+
+.buying-left {
+  margin-left: 150px;
+  margin-right: 15px;
+  font-size: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
+.buying-image {
+  margin-right: 150px;
+  margin-top: 25px;
+}
+
+.buying-image img {
+  border-radius: 5px;
+  height: 460px;
+  width: 590px;
+  object-fit: cover;
 }
