--- a/css-files/index-content.css
+++ b/css-files/index-content.css
@@ -255,10 +255,6 @@ body {
   object-fit: cover;
 }
 
-
-
-
-
 .content2-selling {
   background-color: #456470;
   margin-bottom: 100px;
@@ -301,12 +297,6 @@ body {
   object-fit: cover;
 }
 
-
-
-
-
-
-
 .content2-buying {
   background-color: #D9D9D9;
   margin-bottom: 100px;
@@ -337,4 +327,95 @@ body {
   height: 460px;
   width: 590px;
   object-fit: cover;
+}
+
+
+
+
+
+.newsletter {
+  margin-top: 200px;
+  background-color: #203036;
+}
+
+.newsletter img {
+  width: 100%;
+  height: 380px;
+  opacity: 0;
+}
+
+.newsletter-content {
+  width: 100%;
+  position: absolute;
+  z-index: 2;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.newsletter-text {
+  line-height: 10px;
+  margin-top: 30px;
+}
+
+.newsletter-text h3 {
+  font-size: 50px;
+  font-weight: bolder;
+}
+
+.newsletter-text p {
+  font-size: 26px;
+}
+
+.nexsletter-emailbox {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  margin-top: 50px;
+}
+
+.enter-email {
+  display: flex;
+  align-items: center;
+  background-color: #4E5A5E;
+  width: 550px;
+  height: 50px;
+  border-radius: 9999px;
+  border: white solid 1px;
+}
+
+.enter-email p {
+  font-size: 22px;
+  padding: 5px;
+  margin-left: 10px;
+}
+
+.submit-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  font-size: 25px;
+  background-color: #456470;
+  border-radius: 9999px;
+  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
+}
+
+.submit-button p {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.logo-background {
+  position: relative;
+  background-image: url(/media/example_2.png);
+  background-repeat: repeat-x;
+  background-size: contain;
+  background-position: center;
+  height: 380px;
+  width: 150%;
+  left: -50px;
+  filter: blur(7px);
 }
