--- a/css-files/about-contact.css
+++ b/css-files/about-contact.css
@@ -36,4 +36,17 @@
 
 .contact-flex, .contact-flex1 {
   display: flex;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.hero-image-contact, .hero-image-contact1, .hero-image-contact2, .hero-image-contac3, .hero-image-contact4, .hero-image-contact5 {
+  width: 450px;
+  margin-left: 20px;
+  border-radius: 15px;
+}
+
+.hero-text-contact {
+  text-align: center;
+  color: white;
 }
