--- a/css-files/about-contact.css
+++ b/css-files/about-contact.css
@@ -1,13 +1,24 @@
 .contact-info-box {
   font-size: 17px;
   border: 2px solid black;
-  width: 800px;
   margin-left: 340px;
   margin-top: 20px;
   padding-left: 20px;
   padding-right: 20px;
   text-align: center;
   border-radius: 15px;
+  width: 800px;
+}
+
+.contact-business {
+  border: 2px solid black;
+  width: 550px;
+  font-size: 17px;
+  text-align: center;
+  border-radius: 15px;
+  margin-left: 435px;
+  margin-top: 20px;
+  margin-bottom: 50px;
 }
 
 .hero-image-contact {
@@ -45,6 +56,7 @@
   margin-left: 20px;
   border-radius: 20px;
   height: 250px;
+  border: 2px solid black;
 }
 
 .contact-text-larger {
@@ -60,4 +72,22 @@
 .hero-text-contact a {
   text-decoration: none;
   color: red;
+}
+
+.flex-contact > div {
+  width: 250px;
+  height: 100px;
+  border: 2px solid #000000;
+  background-color: #ffffff;
+  margin: 10px;
+  text-align: center;
+  line-height: 25px;
+  font-size: 17px;
+  border-radius: 15px;
+  margin-inline: auto;
+}
+
+.flex-contact {
+  display: flex; 
+  margin-bottom: 30px;
 }
