--- a/css-files/header-footer.css
+++ b/css-files/header-footer.css
@@ -4,7 +4,7 @@ html, body {
     height: 100%;
     padding: 0;
     margin: 0;
-    background-color: #456470; /* Same as header and footer */
+    background-color: #203036; /* Same as header and footer */
   }
   
   body {
@@ -18,7 +18,7 @@ html, body {
     flex-grow: 0; /* Only takes the place it needs */
     flex-shrink: 0;
     color: #fafafa;
-    background-color: #456470;
+    background-color: #203036;
     padding: 10px;
   }
   
@@ -59,7 +59,7 @@ html, body {
   #links-header a {
     float: right;
     padding-right: 20px;
-    color: black;
+    color: white;
     text-decoration: none;
     font-size: 20px;
     padding-bottom: 20px;
@@ -81,7 +81,7 @@ html, body {
   }
 
   .page-footer a {
-    color: black;
+    color: white;
     text-decoration: none;
     font-size: 20px;
   }
