--- a/css-files/about-contact.css
+++ b/css-files/about-contact.css
@@ -8,11 +8,15 @@
   text-align: center;
   border-radius: 15px;
   width: 800px;
+  background-color: #0C1435;
+  color: #ffffff;
 }
 
 .contact-business {
   border: 2px solid black;
+  background-color: #0C1435;
   width: 550px;
+  color: #ffffff;
   font-size: 17px;
   text-align: center;
   border-radius: 15px;
@@ -78,7 +82,7 @@
   width: 250px;
   height: 100px;
   border: 2px solid #000000;
-  background-color: #ffffff;
+  background-color: #747373;
   margin: 10px;
   text-align: center;
   line-height: 25px;
