--- a/css-files/contact-content.css
+++ b/css-files/contact-content.css
@@ -73,11 +73,6 @@
   font-size: 15px;
 }
 
-.hero-text-contact a {
-  text-decoration: none;
-  color: red;
-}
-
 .flex-contact > div {
   width: 250px;
   height: 100px;
@@ -100,6 +95,10 @@
   background-color: #203036;
   padding: 20px;
   margin-inline: auto;
+  border: 2px solid #ffffff;
+  border-radius: 20px;
+  text-decoration: none;
+  color: #ffffff;
 }
 
 .contact-button {
