--- a/css-files/contact-content.css
+++ b/css-files/contact-content.css
@@ -13,7 +13,7 @@
 }
 
 .contact-business {
-  border: 2px solid black;
+  border: 2px solid #A91C1C;
   background-color: #0C1435;
   width: 550px;
   color: #ffffff;
@@ -60,7 +60,7 @@
   margin-left: 20px;
   border-radius: 20px;
   height: 250px;
-  border: 2px solid black;
+  border: 2px solid #000000;
 }
 
 .contact-text-larger {
@@ -76,7 +76,7 @@
 .flex-contact > div {
   width: 250px;
   height: 100px;
-  border: 2px solid #;
+  border: 2px solid #A91C1C;
   background-color: #0C1435;
   margin: 10px;
   text-align: center;
