--- a/css-files/buy-content.css
+++ b/css-files/buy-content.css
@@ -1,8 +1,12 @@
-.flex-buy-option-setup {
-    display: flex;
+.buy-info-box {
+    font-size: 17px;
+    border: 2px solid black;
+    background-color: #0C1435;
+    width: 650px;
+    height: 200px;
+    margin-top: 20px;
+    color: #ffffff;
+    text-align: center;
+    margin-left: 400px;
+    border-radius: 20px;
 }
-
-.hero-image-chicago {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://www.travelandleisure.com/thmb/wwUPgdpCUuD5sAPFLQf4YasjH0M=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/chicago-illinois-CHITG0221-e448062fc5164da0bba639f9857987f6.jpg')
-}
-
