--- a/css-files/buy-content.css
+++ b/css-files/buy-content.css
@@ -11,7 +11,7 @@
     border-radius: 20px;
 }
 
-.flex-most-options, .flex-country-options, .flex-country-options1, .flex-country-options2 {
+.flex-most-options, .flex-country-options, .flex-country-options1, .flex-country-options2, .flex-country-option3 {
     display: flex;
 }
 
