--- a/css-files/buy-content.css
+++ b/css-files/buy-content.css
@@ -11,7 +11,7 @@
     border-radius: 20px;
 }
 
-.flex-most-options, .flex-country-options, .flex-country-options1, .flex-country-options2, .flex-country-option3, .flex-country-option4, .flex-country-option5 {
+.flex-most-options, .flex-country-options, .flex-country-options1, .flex-country-options2, .flex-country-option3, .flex-country-option4, .flex-country-option5, .flex-country-option6, .flex-country-option7, .flex-country-options8 {
     display: flex;
 }
 
