--- a/css-files/buy-rent-sell.css
+++ b/css-files/buy-rent-sell.css
@@ -24,12 +24,25 @@
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://media.istockphoto.com/id/181101870/photo/flag-of-maldives-the.jpg?s=612x612&w=0&k=20&c=dEU94JpKoHX6DGvphVftvErIybVFqxB74fRmpbsJpRE=')
 }
 
-.hero-italy-image, .hero-canada-image, .hero-maldives-image {
-    width: 250px;
-    height: 150px;
-    margin-left: 10px;
+.hero-singapore-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://www.motosha.com/files/preview/1280x711/2162-singapore-flag.jpg')
 }
 
-.flex-hero-container-one {
+.hero-isreal-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://img.freepik.com/premium-photo/national-flag-israel-israel-flag-fabric-flag-israel-3d-work-3d-image_220166-48.jpg')
+}
+
+.hero-usa-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://media.istockphoto.com/id/1532456749/photo/us-flag-texture-4th-of-july-and-other-usa-holidays-background.webp?b=1&s=170667a&w=0&k=20&c=3Z_EZLdi_mR0XYB_LNe_dAjmrNUftuDX0OGq_EfRLgM=')
+}
+
+.hero-italy-image, .hero-canada-image, .hero-maldives-image, .hero-singapore-image, .hero-isreal-image, .hero-usa-image {
+    width: 265px;
+    height: 150px;
+    margin-left: 20px;
+    margin-top: 15px;
+}
+
+.flex-hero-container-one, .flex-hero-container-two {
     display: flex;
 }
