--- a/css-files/buy-rent-sell.css
+++ b/css-files/buy-rent-sell.css
@@ -68,7 +68,11 @@
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://t3.ftcdn.net/jpg/01/11/68/26/360_F_111682656_g63NR8Z16g8H8boPR3LK6J4VEbSv9oXg.jpg')
 }
 
-.hero-italy-image, .hero-canada-image, .hero-maldives-image, .hero-singapore-image, .hero-isreal-image, .hero-usa-image, .hero-switzerland-image, .hero-scotland-image, .hero-sri-lanka-image, .hero-denamrk-image, .hero-latvia-image, .hero-uae-image, .hero-england-image, .hero-germany-image {
+.hero-france-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://t4.ftcdn.net/jpg/05/97/85/01/360_F_597850197_FTLnwDyfHfqwR51aB1cnqqtcH5nMpQcD.jpg')
+}
+
+.hero-italy-image, .hero-canada-image, .hero-maldives-image, .hero-singapore-image, .hero-isreal-image, .hero-usa-image, .hero-switzerland-image, .hero-scotland-image, .hero-sri-lanka-image, .hero-denamrk-image, .hero-latvia-image, .hero-uae-image, .hero-england-image, .hero-germany-image, .hero-france-image {
     width: 265px;
     height: 150px;
     margin-left: 20px;
