--- a/css-files/buy-rent-sell.css
+++ b/css-files/buy-rent-sell.css
@@ -62,6 +62,22 @@
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://t4.ftcdn.net/jpg/00/62/18/65/360_F_62186589_CNB8OQxIGXs8160SakuWChkdONYG1Io3.jpg')
 }
 
+.hero-belgium-hero {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://media.istockphoto.com/id/1130893665/video/belgium-flag.jpg?s=640x640&k=20&c=xiexYimIsapurPbv35jvKxmupm9wwjF8cj-ZneIpqZ4=')
+}
+
+.hero-crotia-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://t4.ftcdn.net/jpg/04/35/32/73/360_F_435327314_47CiknGivBXBbrMPEWZL9wTlMuXSszfn.jpg')
+}
+
+.hero-wales-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYTpufb4aZQ3yiDW_uzvl_BpUzc_hjlG6wAHAtpgDdQg&s')
+}
+
+.hero-austria-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcScJF42dSf17lzHdc4uAo7nwriPlwVuV1Sw44lQqgPIMA&s')
+}
+
 .hero-italy-image, .hero-switzerland-image, .hero-scotland-image, .hero-poland-image, .hero-denmark-image {
     margin-top: 75px;
     width: 270px;
@@ -80,7 +96,7 @@ margin-left: -230px;
     height: 100px;
 }
 
-.hero-irland-image {
+.hero-irland-image, .hero-belgium-hero, .hero-crotia-image, .hero-wales-image, .hero-austria-image {
     width: 270px;
     height: 100px;
     margin-top: 20px;
